--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    background-color: rgba(255 255 255 .8);
+}
 #nav-bar a {
     color:#ffffff;
     font-family: 'Courier New', Courier, monospace;
@@ -29,4 +32,64 @@ img{
     width:  400px;
     height: 400px;
     object-fit: cover;
+    box-decoration-break:slice;
 }
+
+
+input{
+    width: 25%;
+    height: 25px;
+    margin : 12px 0;
+    border : 1px solid #929292;
+}
+
+textarea{
+    width: 100%;
+    height :25px;
+    margin : 12px 0;
+    border : 1px solid #929292;
+}
+
+.button{
+    display : block;
+    background-color: mediumseagreen;
+    font-family: 'Courier New', Courier, monospace;
+    font-size:18px;
+    text-decoration : none;
+    text-align  : center;
+    color       : white;
+    font-weight : 400px;
+    padding : 8px 0;
+}
+
+.button:hover{
+ color: greenyellow;
+}
+
+
+.column {
+    float: left;
+    width: 30%;
+    padding: 5px;
+  }
+  
+
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+.cards{
+ height: 200px;
+ background: url("images/Card\ scheme\ \(1\).png");
+ background-repeat: no-repeat;
+ background-size: cover;
+ background-position: center;
+ float: none;
+ display: block;
+ margin-left:auto ;
+ margin-right:auto ;
+ width:25%;
+}
+
